--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
 <h3>
 <a id="examples" class="anchor" href="#examples" aria-hidden="true"><span class="octicon octicon-link"></span></a>Examples</h3>
 
-<div class="highlight highlight-sh"><pre>id3 -a <span class="pl-s1"><span class="pl-pds">"</span>Stallman<span class="pl-pds">"</span></span> -t <span class="pl-s1"><span class="pl-pds">"</span>Free Software Song<span class="pl-pds">"</span></span> fs_song.mp3<span class="pl-s1"><span class="pl-pds">"</span></span></pre></div>
+<div class="highlight highlight-source-shell"><pre>id3 -a <span class="pl-s"><span class="pl-pds">"</span>Stallman<span class="pl-pds">"</span></span> -t <span class="pl-s"><span class="pl-pds">"</span>Free Software Song<span class="pl-pds">"</span></span> fs_song.mp3<span class="pl-s"><span class="pl-pds">"</span></span></pre></div>
 
 <p>Add a simple tag to a file.</p>
 
-<div class="highlight highlight-sh"><pre>id3 mysong.mp3</pre></div>
+<div class="highlight highlight-source-shell"><pre>id3 mysong.mp3</pre></div>
 
 <p>List tag info contained in file</p>
 
-<div class="highlight highlight-sh"><pre>id3 -g <span class="pl-s1"><span class="pl-pds">"</span>psych rock<span class="pl-pds">"</span></span> <span class="pl-k">*</span>.mp3</pre></div>
+<div class="highlight highlight-source-shell"><pre>id3 -g <span class="pl-s"><span class="pl-pds">"</span>psych rock<span class="pl-pds">"</span></span> <span class="pl-k">*</span>.mp3</pre></div>
 
 <p>Sets genre to "Psychedelic Rock" in all mp3's</p>
 
-<div class="highlight highlight-sh"><pre>id3 -2 -a <span class="pl-s1"><span class="pl-pds">"</span>TAFKAT<span class="pl-pds">"</span></span> -n <span class="pl-s1"><span class="pl-pds">"</span>%1<span class="pl-pds">"</span></span> -t <span class="pl-s1"><span class="pl-pds">"</span>%+2<span class="pl-pds">"</span></span> <span class="pl-s1"><span class="pl-pds">"</span>*. *.mp3<span class="pl-pds">"</span></span></pre></div>
+<div class="highlight highlight-source-shell"><pre>id3 -2 -a <span class="pl-s"><span class="pl-pds">"</span>TAFKAT<span class="pl-pds">"</span></span> -n <span class="pl-s"><span class="pl-pds">"</span>%1<span class="pl-pds">"</span></span> -t <span class="pl-s"><span class="pl-pds">"</span>%+2<span class="pl-pds">"</span></span> <span class="pl-s"><span class="pl-pds">"</span>*. *.mp3<span class="pl-pds">"</span></span></pre></div>
 
 <p>Update ID3v2 tag fields similar to this;</p>
 
@@ -60,55 +60,55 @@
 id3 -a "TAFKAT" -n "02" -t "Untitled" "02. untitled.mp3"</p>
 </blockquote>
 
-<div class="highlight highlight-sh"><pre>id3 -2 -m <span class="pl-s1"><span class="pl-pds">"</span>%n. %+t.mp3<span class="pl-pds">"</span></span></pre></div>
+<div class="highlight highlight-source-shell"><pre>id3 -2 -m <span class="pl-s"><span class="pl-pds">"</span>%n. %+t.mp3<span class="pl-pds">"</span></span></pre></div>
 
 <p>Shorthand notation for the above, using the -m option.</p>
 
-<div class="highlight highlight-sh"><pre>id3 -2 -f <span class="pl-s1"><span class="pl-pds">"</span>%a - %t.mp3<span class="pl-pds">"</span></span> blaet.mp3</pre></div>
+<div class="highlight highlight-source-shell"><pre>id3 -2 -f <span class="pl-s"><span class="pl-pds">"</span>%a - %t.mp3<span class="pl-pds">"</span></span> blaet.mp3</pre></div>
 
 <p>Rename file to a standard "Artist - Title" format, using ID3v2 values.</p>
 
-<div class="highlight highlight-sh"><pre>id3 -g <span class="pl-s1"><span class="pl-pds">"</span>alt rock<span class="pl-pds">"</span></span> -a <span class="pl-s1"><span class="pl-pds">"</span>The Author<span class="pl-pds">"</span></span> -l %1 -n %2 -t %3 <span class="pl-s1"><span class="pl-pds">"</span>Author - */(*) *.mp3<span class="pl-pds">"</span></span></pre></div>
+<div class="highlight highlight-source-shell"><pre>id3 -g <span class="pl-s"><span class="pl-pds">"</span>alt rock<span class="pl-pds">"</span></span> -a <span class="pl-s"><span class="pl-pds">"</span>The Author<span class="pl-pds">"</span></span> -l %1 -n %2 -t %3 <span class="pl-s"><span class="pl-pds">"</span>Author - */(*) *.mp3<span class="pl-pds">"</span></span></pre></div>
 
 <p>Process multiple directories at once.</p>
 
-<div class="highlight highlight-sh"><pre>id3 -ga <span class="pl-s1"><span class="pl-pds">"</span>alt rock<span class="pl-pds">"</span></span> <span class="pl-s1"><span class="pl-pds">"</span>The Author<span class="pl-pds">"</span></span> -m <span class="pl-s1"><span class="pl-pds">"</span>Author - %l/(%n) %t.mp3<span class="pl-pds">"</span></span></pre></div>
+<div class="highlight highlight-source-shell"><pre>id3 -ga <span class="pl-s"><span class="pl-pds">"</span>alt rock<span class="pl-pds">"</span></span> <span class="pl-s"><span class="pl-pds">"</span>The Author<span class="pl-pds">"</span></span> -m <span class="pl-s"><span class="pl-pds">"</span>Author - %l/(%n) %t.mp3<span class="pl-pds">"</span></span></pre></div>
 
 <p>Shorthand for the previous example.</p>
 
-<div class="highlight highlight-sh"><pre>id3 -1 -3 -d <span class="pl-k">*</span>.mp3</pre></div>
+<div class="highlight highlight-source-shell"><pre>id3 -1 -3 -d <span class="pl-k">*</span>.mp3</pre></div>
 
 <p>Removes all ID3v1 and Lyrics3 tags from all mp3's</p>
 
-<div class="highlight highlight-sh"><pre>id3 -2 -1 -u <span class="pl-s1"><span class="pl-pds">"</span>*.mp3<span class="pl-pds">"</span></span></pre></div>
+<div class="highlight highlight-source-shell"><pre>id3 -2 -1 -u <span class="pl-s"><span class="pl-pds">"</span>*.mp3<span class="pl-pds">"</span></span></pre></div>
 
 <p>Copy ID3v2 tag to ID3v1 tag in all files.</p>
 
-<div class="highlight highlight-sh"><pre>id3 -a %t -t %a <span class="pl-s1"><span class="pl-pds">"</span>*.mp3<span class="pl-pds">"</span></span></pre></div>
+<div class="highlight highlight-source-shell"><pre>id3 -a %t -t %a <span class="pl-s"><span class="pl-pds">"</span>*.mp3<span class="pl-pds">"</span></span></pre></div>
 
 <p>Swap artist and title fields in all mp3's.</p>
 
-<div class="highlight highlight-sh"><pre>id3 -D <span class="pl-s3">source</span>.mp3 -1 -2 dest.mp3</pre></div>
+<div class="highlight highlight-source-shell"><pre>id3 -D <span class="pl-c1">source</span>.mp3 -1 -2 dest.mp3</pre></div>
 
 <p>Copy ID3v1 and ID3v2 tags of source.mp3 to dest.mp3</p>
 
-<div class="highlight highlight-sh"><pre>id3 -D <span class="pl-s3">source</span>.mp3 -1u -2u dest.mp3</pre></div>
+<div class="highlight highlight-source-shell"><pre>id3 -D <span class="pl-c1">source</span>.mp3 -1u -2u dest.mp3</pre></div>
 
 <p>As above, but only replaces the non-standard or blank fields in dest.mp3 by data from source.mp3.</p>
 
-<div class="highlight highlight-sh"><pre>id3 -2 -rAPIC -s 0 <span class="pl-k">*</span>.mp3</pre></div>
+<div class="highlight highlight-source-shell"><pre>id3 -2 -rAPIC -s 0 <span class="pl-k">*</span>.mp3</pre></div>
 
 <p>Removes embedded images and padding from all mp3's.</p>
 
-<div class="highlight highlight-sh"><pre>id3 -2 -rAPIC -s 0 -R <span class="pl-s1"><span class="pl-pds">"</span>*.mp3<span class="pl-pds">"</span></span> <span class="pl-s1"><span class="pl-pds">"</span>/my documents<span class="pl-pds">"</span></span></pre></div>
+<div class="highlight highlight-source-shell"><pre>id3 -2 -rAPIC -s 0 -R <span class="pl-s"><span class="pl-pds">"</span>*.mp3<span class="pl-pds">"</span></span> <span class="pl-s"><span class="pl-pds">"</span>/my documents<span class="pl-pds">"</span></span></pre></div>
 
 <p>As above, but works recursively on all mp3's in the directory tree starting at /my documents</p>
 
-<div class="highlight highlight-sh"><pre>id3 -2 -q <span class="pl-s1"><span class="pl-pds">"</span>%| %a - %|Untitled|t || %t || %1 |?<span class="pl-pds">"</span></span> <span class="pl-s1"><span class="pl-pds">"</span>*.mp3<span class="pl-pds">"</span></span></pre></div>
+<div class="highlight highlight-source-shell"><pre>id3 -2 -q <span class="pl-s"><span class="pl-pds">"</span>%| %a - %|Untitled|t || %t || %1 |?<span class="pl-pds">"</span></span> <span class="pl-s"><span class="pl-pds">"</span>*.mp3<span class="pl-pds">"</span></span></pre></div>
 
 <p>Generate a playlist, using the best possible text</p>
 
-<div class="highlight highlight-sh"><pre>id3 -2 -c <span class="pl-s1"><span class="pl-pds">"</span>Was: %_f<span class="pl-pds">"</span></span> -f <span class="pl-s1"><span class="pl-pds">"</span>%a - %|Untitled (%#x)|t.mp3<span class="pl-pds">"</span></span> <span class="pl-s1"><span class="pl-pds">"</span>*.mp3<span class="pl-pds">"</span></span></pre></div>
+<div class="highlight highlight-source-shell"><pre>id3 -2 -c <span class="pl-s"><span class="pl-pds">"</span>Was: %_f<span class="pl-pds">"</span></span> -f <span class="pl-s"><span class="pl-pds">"</span>%a - %|Untitled (%#x)|t.mp3<span class="pl-pds">"</span></span> <span class="pl-s"><span class="pl-pds">"</span>*.mp3<span class="pl-pds">"</span></span></pre></div>
 
 <p>Advanced rename. Saves previous filename in the comment field, and renames files without proper tags to;</p>
 
@@ -196,7 +196,7 @@ accompanying file <a href="https://raw.githubusercontent.com/squell/id3/master/C
     <div id="footer_wrap" class="outer">
       <footer class="inner">
         <p class="copyright">id3 maintained by <a href="https://github.com/squell">squell</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
 
