--- a/index.html
+++ b/index.html
@@ -43,38 +43,39 @@
 
 <p>Add a simple tag to a file.</p>
 
-<div class="highlight highlight-source-shell"><pre>id3 mysong.mp3</pre></div>
+<div class="highlight highlight-source-shell"><pre>id3 mysong.mp3
+id3 -v mysong.mp3</pre></div>
 
-<p>List tag info contained in file</p>
+<p>List tag info contained in file (short-form and detailed)</p>
 
-<div class="highlight highlight-source-shell"><pre>id3 -g <span class="pl-s"><span class="pl-pds">"</span>psych rock<span class="pl-pds">"</span></span> <span class="pl-k">*</span>.mp3</pre></div>
+<div class="highlight highlight-source-shell"><pre>id3 --genre <span class="pl-s"><span class="pl-pds">"</span>psych rock<span class="pl-pds">"</span></span> <span class="pl-k">*</span>.mp3</pre></div>
 
 <p>Sets genre to "Psychedelic Rock" in all mp3's</p>
 
-<div class="highlight highlight-source-shell"><pre>id3 -2 -a <span class="pl-s"><span class="pl-pds">"</span>TAFKAT<span class="pl-pds">"</span></span> -n <span class="pl-s"><span class="pl-pds">"</span>%1<span class="pl-pds">"</span></span> -t <span class="pl-s"><span class="pl-pds">"</span>%+2<span class="pl-pds">"</span></span> <span class="pl-s"><span class="pl-pds">"</span>*. *.mp3<span class="pl-pds">"</span></span></pre></div>
+<div class="highlight highlight-source-shell"><pre>id3 --artist <span class="pl-s"><span class="pl-pds">"</span>TAFKAT<span class="pl-pds">"</span></span> --track <span class="pl-s"><span class="pl-pds">"</span>%1<span class="pl-pds">"</span></span> -title <span class="pl-s"><span class="pl-pds">"</span>%+2<span class="pl-pds">"</span></span> <span class="pl-s"><span class="pl-pds">"</span>*. *.mp3<span class="pl-pds">"</span></span></pre></div>
 
-<p>Update ID3v2 tag fields similar to this;</p>
+<p>Update tag fields similar to this;</p>
 
 <blockquote>
 <p>id3 -a "TAFKAT" -n "01" -t "My Song"  "01. my_song.mp3"<br>
 id3 -a "TAFKAT" -n "02" -t "Untitled" "02. untitled.mp3"</p>
 </blockquote>
 
-<div class="highlight highlight-source-shell"><pre>id3 -2 -m <span class="pl-s"><span class="pl-pds">"</span>%n. %+t.mp3<span class="pl-pds">"</span></span></pre></div>
+<div class="highlight highlight-source-shell"><pre>id3 -m <span class="pl-s"><span class="pl-pds">"</span>%n. %+t.mp3<span class="pl-pds">"</span></span></pre></div>
 
 <p>Shorthand notation for the above, using the -m option.</p>
 
-<div class="highlight highlight-source-shell"><pre>id3 -2 -f <span class="pl-s"><span class="pl-pds">"</span>%a - %t.mp3<span class="pl-pds">"</span></span> blaet.mp3</pre></div>
+<div class="highlight highlight-source-shell"><pre>id3 -f <span class="pl-s"><span class="pl-pds">"</span>%a - %t.mp3<span class="pl-pds">"</span></span> blaet.mp3</pre></div>
 
-<p>Rename file to a standard "Artist - Title" format, using ID3v2 values.</p>
+<p>Rename file to a standard "Artist - Title" format.</p>
 
 <div class="highlight highlight-source-shell"><pre>id3 -g <span class="pl-s"><span class="pl-pds">"</span>alt rock<span class="pl-pds">"</span></span> -a <span class="pl-s"><span class="pl-pds">"</span>The Author<span class="pl-pds">"</span></span> -l %1 -n %2 -t %3 <span class="pl-s"><span class="pl-pds">"</span>Author - */(*) *.mp3<span class="pl-pds">"</span></span></pre></div>
 
 <p>Process multiple directories at once.</p>
 
-<div class="highlight highlight-source-shell"><pre>id3 -ga <span class="pl-s"><span class="pl-pds">"</span>alt rock<span class="pl-pds">"</span></span> <span class="pl-s"><span class="pl-pds">"</span>The Author<span class="pl-pds">"</span></span> -m <span class="pl-s"><span class="pl-pds">"</span>Author - %l/(%n) %t.mp3<span class="pl-pds">"</span></span></pre></div>
+<div class="highlight highlight-source-shell"><pre>id3 -2 -wTPE2 <span class="pl-s"><span class="pl-pds">"</span>%{TXXX:ALBUM ARTIST}<span class="pl-pds">"</span></span> file.mp3</pre></div>
 
-<p>Shorthand for the previous example.</p>
+<p>Copy the ID3v2 album artist field (as used by Foobar2000), if any, to the field used by iTunes</p>
 
 <div class="highlight highlight-source-shell"><pre>id3 -1 -3 -d <span class="pl-k">*</span>.mp3</pre></div>
 
@@ -82,7 +83,7 @@ id3 -a "TAFKAT" -n "02" -t "Untitled" "02. untitled.mp3"</p>
 
 <div class="highlight highlight-source-shell"><pre>id3 -2 -1 -u <span class="pl-s"><span class="pl-pds">"</span>*.mp3<span class="pl-pds">"</span></span></pre></div>
 
-<p>Copy ID3v2 tag to ID3v1 tag in all files.</p>
+<p>Copy ID3v2 tag (if any) to ID3v1 tag in all files.</p>
 
 <div class="highlight highlight-source-shell"><pre>id3 -a %t -t %a <span class="pl-s"><span class="pl-pds">"</span>*.mp3<span class="pl-pds">"</span></span></pre></div>
 
@@ -96,13 +97,13 @@ id3 -a "TAFKAT" -n "02" -t "Untitled" "02. untitled.mp3"</p>
 
 <p>As above, but only replaces the non-standard or blank fields in dest.mp3 by data from source.mp3.</p>
 
-<div class="highlight highlight-source-shell"><pre>id3 -2 -rAPIC -s 0 <span class="pl-k">*</span>.mp3</pre></div>
+<div class="highlight highlight-source-shell"><pre>id3 -2 -rAPIC -rGEOB -s 0 <span class="pl-k">*</span>.mp3</pre></div>
 
-<p>Removes embedded images and padding from all mp3's.</p>
+<p>Removes embedded images, binary blobs, and padding from all mp3's.</p>
 
-<div class="highlight highlight-source-shell"><pre>id3 -2 -rAPIC -s 0 -R <span class="pl-s"><span class="pl-pds">"</span>*.mp3<span class="pl-pds">"</span></span> <span class="pl-s"><span class="pl-pds">"</span>/my documents<span class="pl-pds">"</span></span></pre></div>
+<div class="highlight highlight-source-shell"><pre>id3 -2 -rAPIC -rGEOB -s 0 -R <span class="pl-s"><span class="pl-pds">"</span>Music/*.mp3<span class="pl-pds">"</span></span></pre></div>
 
-<p>As above, but works recursively on all mp3's in the directory tree starting at /my documents</p>
+<p>As above, but works recursively on all mp3's in the Music folder</p>
 
 <div class="highlight highlight-source-shell"><pre>id3 -2 -q <span class="pl-s"><span class="pl-pds">"</span>%| %a - %|Untitled|t || %t || %1 |?<span class="pl-pds">"</span></span> <span class="pl-s"><span class="pl-pds">"</span>*.mp3<span class="pl-pds">"</span></span></pre></div>
 
@@ -123,9 +124,10 @@ Unknown - Untitled (02).mp3<br>
 <h3>
 <a id="limitations" class="anchor" href="#limitations" aria-hidden="true"><span class="octicon octicon-link"></span></a>Limitations</h3>
 
-<p>ID3v2.4 at the start of a file can be read, but will be converted to ID3v2.3 when written. Also, do not use this program to tag anything else than MP3 files.</p>
+<p>ID3v2.4 at the start of a file can be read, but will be converted to the universally recognized ID3v2.3 when written. This may actually be a feature rather
+than a limitation; e.g. running <code>id3 -2u</code> is a quick way to convert tags to a form your portable player may recognize.</p>
 
-<p>On Windows, support for non-ASCII characters (e.g. Russian or Korean characters) is dependent on your language settings.</p>
+<p>On Windows, support for non-ASCII characters (e.g. Russian or Korean characters) is dependent on your system language settings. A Unicode version is on the TODO list.</p>
 
 <h3>
 <a id="getting-it" class="anchor" href="#getting-it" aria-hidden="true"><span class="octicon octicon-link"></span></a>Getting it</h3>
@@ -140,6 +142,16 @@ Unknown - Untitled (02).mp3<br>
 </tr>
 </thead>
 <tbody>
+<tr>
+<td>0.80</td>
+<td>21 Dec 2015</td>
+<td>
+<a href="https://github.com/squell/id3/releases/download/0.80/id3-0.80.tar.gz">tarball</a>/<a href="https://github.com/squell/id3/releases/download/0.80/id3-080s.zip">zip</a>
+</td>
+<td>
+<a href="https://github.com/squell/id3/releases/download/0.80/id3-080w.zip">Windows</a><br> Debian/Ubuntu: <a href="https://github.com/squell/id3/releases/download/0.80/id3mtag_0.80-1_amd64.deb">amd64</a>/<a href="https://github.com/squell/id3/releases/download/0.80/id3mtag_0.80-1_i386.deb">i386</a>
+</td>
+</tr>
 <tr>
 <td>0.79</td>
 <td>30 Jan 2015</td>
